# gcp-fraud-detection-mlops

./: .dockerignore  .env.example  .gcloudignore  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.monitoring  README.md  project_context.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
data/sample/: transactions_sample.csv
infrastructure/: architecture.drawio  cloudbuild.monitoring.yaml  setup_gcp.sh
src/evaluation/: dashboard.py  experiments.py  explainer.py  report.py
src/features/: bigquery.py  config.py  feature_store.py  sample_data.py  schema.py  transforms.py
src/inference/: app.py  features.py  registry.py  schemas.py  state.py
src/monitoring/: app.py  drift.py  monitor.py  scheduler.py
src/training/: dataset.py  experiments.py  metrics.py  models.py  train.py  vertex.py
tests/evaluation/: conftest.py  test_dashboard.py  test_experiments.py  test_explainer.py  test_report.py
tests/features/: conftest.py  test_bigquery.py  test_config.py  test_feature_store.py  test_sample_data.py  test_schema.py  test_transforms.py
tests/inference/: conftest.py  test_app.py  test_registry.py  test_skew.py  test_state.py
tests/monitoring/: conftest.py  test_app.py  test_drift.py  test_monitor.py  test_scheduler.py
tests/training/: test_dataset.py  test_experiments.py  test_metrics.py  test_models.py  test_train.py  test_vertex.py
tests/workflows/: test_workflows.py
