[project]
name = "gcp-fraud-detection-mlops"
version = "0.1.0"
description = "Real-time fraud detection MLOps pipeline on GCP Vertex AI"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Milon Ahmed" }]

# Dependencies are added phase by phase as each module lands.
dependencies = []

[project.optional-dependencies]
dev = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py311"
line-length = 100
