[project]
name = "gcp-fraud-detection-mlops"
version = "0.1.0"
description = "Real-time fraud detection MLOps pipeline on GCP Vertex AI"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Milon Ahmed" }]

# Dependencies are added phase by phase as each module lands.
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "python-dotenv>=1.0",
    "google-cloud-bigquery>=3.25",
    "google-cloud-aiplatform>=1.60",
    "pyarrow>=16.0",
    "scikit-learn>=1.5",
    "xgboost>=2.1",
    "lightgbm>=4.5",
    "joblib>=1.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py311"
line-length = 100
