[project]
name = "gcp-fraud-detection-mlops"
version = "0.1.0"
description = "Real-time fraud detection MLOps pipeline on GCP Vertex AI"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Milon Ahmed" }]

# Dependencies are added phase by phase as each module lands.
# Core = exactly what the Cloud Run inference image needs, and nothing more.
# The GCP SDKs are lazy-imported everywhere (see src/features/bigquery.py), so
# they can live in an extra. Keeping them out of the serving image cuts roughly
# a third of its size, which Cloud Run charges for on every cold start.
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "python-dotenv>=1.0",
    "scikit-learn>=1.5",
    # Imported directly by src/monitoring/drift.py (ks_2samp). Present
    # transitively via scikit-learn, but depending on that would be a trap.
    "scipy>=1.11",
    "xgboost>=2.1",
    "lightgbm>=4.5",
    "joblib>=1.4",
    "shap>=0.46",
    # shap pulls in numba -> llvmlite. Without a floor, the resolver backtracks
    # to llvmlite 0.36, which refuses to build on Python 3.11.
    "numba>=0.60",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.8",
]

[project.optional-dependencies]
# Needed by src/features/bigquery.py, src/features/feature_store.py,
# src/training/vertex.py and src/evaluation/experiments.py -- i.e. the training
# and ingestion paths, never the serving path.
gcp = [
    "google-cloud-bigquery>=3.25",
    "google-cloud-aiplatform>=1.60",
    "google-cloud-scheduler>=2.13",
    "pyarrow>=16.0",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py311"
line-length = 100
